--- a/build.gradle
+++ b/build.gradle
@@ -1,55 +1,55 @@
 plugins {
-	id 'java'
-	id 'org.springframework.boot' version '3.1.1'
-	id 'io.spring.dependency-management' version '1.1.0'
-	id 'org.asciidoctor.jvm.convert' version '3.3.2'
+    id 'java'
+    id 'org.springframework.boot' version '3.1.1'
+    id 'io.spring.dependency-management' version '1.1.0'
+    id 'org.asciidoctor.jvm.convert' version '3.3.2'
 }
 
 group = 'com.search'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = '17'
+    sourceCompatibility = '17'
 }
 
 configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
-	}
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
 }
 
-bootJar.enabled = false
+repositories {
+    mavenCentral()
+}
 
-
-subprojects{
-	apply plugin: 'java'
-	apply plugin: 'org.springframework.boot'
-	apply plugin: 'io.spring.dependency-management'
-
-    repositories {
-        mavenCentral()
-    }
+subprojects {
+    apply plugin: 'java'
+    apply plugin: 'org.springframework.boot'
+    apply plugin: 'io.spring.dependency-management'
 
     dependencies {
-		implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
-		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-		implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-		implementation 'org.springframework.boot:spring-boot-starter-web'
-		compileOnly 'org.projectlombok:lombok'
-		annotationProcessor 'org.projectlombok:lombok'
-		testImplementation 'org.springframework.boot:spring-boot-starter-test'
-		testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
-	}
+        implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
+        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+        implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+        implementation 'org.springframework.boot:spring-boot-starter-web'
+        runtimeOnly 'com.h2database:h2'
+        compileOnly 'org.projectlombok:lombok'
+        annotationProcessor 'org.projectlombok:lombok'
+        testImplementation 'org.springframework.boot:spring-boot-starter-test'
+        testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 
-	ext {
-		set('snippetsDir', file("build/generated-snippets"))
-	}
+//		testImplementation group: 'it.ozimov', name: 'embedded-redis', version: '0.7.2'
+    }
+
+    ext {
+        set('snippetsDir', file("build/generated-snippets"))
+    }
 
 
-	tasks.named('test') {
-		outputs.dir snippetsDir
-		useJUnitPlatform()
-	}
+    tasks.named('test') {
+        outputs.dir snippetsDir
+        useJUnitPlatform()
+    }
 
 //	tasks.named('asciidoctor') {
 //		inputs.dir snippetsDir
@@ -57,10 +57,31 @@ subprojects{
 //	}
 
 }
-
-//project(':search-core'){
-//	dependencies {
-//
-//	}
+//project(':search-api') {
+//    bootJar {enabled = true}
+//    jar { enabled = false }
+//    dependencies {
+//        compileOnly project(':search-core')
+//    }
 //}
-
+//
+//
+//
+//project(':search-core') {
+//    bootJar { enabled = false }
+//    jar { enabled = true }
+//
+//    dependencies {
+//        implementation 'org.springframework.boot:spring-boot-starter-aop'
+//        implementation "com.github.maricn:logback-slack-appender:1.6.1"
+//    }
+//}
+//
+//
+//project(':search-batch') {
+//    bootJar { enabled = true }
+//    jar { enabled = false }
+//    dependencies {
+//        compileOnly project(':search-core')
+//    }
+//}
