--- a/build.gradle
+++ b/build.gradle
@@ -22,27 +22,29 @@ repositories {
     mavenCentral()
 }
 
-subprojects {
-    apply plugin: 'java'
-    apply plugin: 'org.springframework.boot'
-    apply plugin: 'io.spring.dependency-management'
 
-    dependencies {
-        implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
-        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-        implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-        implementation 'org.springframework.boot:spring-boot-starter-web'
-        runtimeOnly 'com.h2database:h2'
-        compileOnly 'org.projectlombok:lombok'
-        annotationProcessor 'org.projectlombok:lombok'
-        testImplementation 'org.springframework.boot:spring-boot-starter-test'
-        testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+
+dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    runtimeOnly 'com.h2database:h2'
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
+    implementation "com.github.maricn:logback-slack-appender:1.6.1"
 
 //		testImplementation group: 'it.ozimov', name: 'embedded-redis', version: '0.7.2'
-    }
+
 
     ext {
         set('snippetsDir', file("build/generated-snippets"))
+    }
+    bootJar {
+        enabled = true
     }
 
 
@@ -57,31 +59,4 @@ subprojects {
 //	}
 
 }
-//project(':search-api') {
-//    bootJar {enabled = true}
-//    jar { enabled = false }
-//    dependencies {
-//        compileOnly project(':search-core')
-//    }
-//}
-//
-//
-//
-//project(':search-core') {
-//    bootJar { enabled = false }
-//    jar { enabled = true }
-//
-//    dependencies {
-//        implementation 'org.springframework.boot:spring-boot-starter-aop'
-//        implementation "com.github.maricn:logback-slack-appender:1.6.1"
-//    }
-//}
-//
-//
-//project(':search-batch') {
-//    bootJar { enabled = true }
-//    jar { enabled = false }
-//    dependencies {
-//        compileOnly project(':search-core')
-//    }
-//}
+
