--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,6 @@ repositories {
 }
 
 
-
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -36,8 +35,15 @@ dependencies {
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
     implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation "com.github.maricn:logback-slack-appender:1.6.1"
+    implementation ('it.ozimov:embedded-redis:0.7.3') { exclude group: "org.slf4j", module: "slf4j-simple" }
 
-//		testImplementation group: 'it.ozimov', name: 'embedded-redis', version: '0.7.2'
+    //test
+    testImplementation 'org.mockito:mockito-core:3.12.4'
+    testImplementation 'org.testcontainers:junit-jupiter'
+
+    // test에서 SLF4J 사용 가능하도록
+    testCompileOnly 'org.projectlombok:lombok'
+    testAnnotationProcessor 'org.projectlombok:lombok'
 
 
     ext {
@@ -52,11 +58,6 @@ dependencies {
         outputs.dir snippetsDir
         useJUnitPlatform()
     }
-
-//	tasks.named('asciidoctor') {
-//		inputs.dir snippetsDir
-//		dependsOn test
-//	}
 
 }
 
