--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -49,7 +49,8 @@ server:
 open:
   kakao:
     URL: https://dapi.kakao.com/v2/search/blog
-    REST_API_KEY: 168f49791c65ed92825014082de464c4 #발급받은 키
+    REST_API_KEY: 168f49791c65ed92825014082de464c4
   naver:
-    URL: https://dapi.kakao.com/v2/search/blog
-    REST_API_KEY: 168f49791c65ed92825014082de464c4 #발급받은 키
+    URL: https://openapi.naver.com/v1/search/blog
+    REST_API_KEY: E5rbfIRy7s
+    CLIENT_ID: pkMqvYKGW5PpQP3XcTjp
